@@ -24,44 +24,99 @@
 |                                                                           |
 |   Changelog :                                                             |
 |               07/11/2007 - Paf - Initial release                          |
+|               08/17/2007 - Paf - Update namespace                         |
+|               08/18/2007 - Paf - Implement SourceFile::isFetcheable()     |
 |                                                                           |
 \*-------------------------------------------------------------------------*/
 
 
 #include "../include/sourcefile.h"
+#include <stddef.h>
+#include <sys/types.h>
+#include <dirent.h>
 
 
-SourceFile::SourceFile( const string _path, bool _overWrite, unsigned int _priority) : ISource(_priority), m_path(_path), m_overWrite(_overWrite)
+namespace Viracocha 
 {
-
-}
-
-
-SourceFile::~SourceFile()
-{
-}
-
-
-shared_ptr<IStream> SourceFile::load( const string _url)
-{
-	shared_ptr<IStream> file ( new FileStream( m_path + string("/") + _url, m_overWrite ));
-	return file;
-}
-
-
-bool SourceFile::isFetchable( const string _url)
-{
-	if ( ! _url.find(m_path))
+	namespace Core 
 	{
-			  return false;
+
+		SourceFile::SourceFile( const string _path, bool _overWrite, unsigned int _priority) : ISource(_priority), m_path(_path), m_overWrite(_overWrite)
+		{
+
+		}
+
+
+		SourceFile::~SourceFile()
+		{
+		}
+
+
+		shared_ptr<IStream> SourceFile::load( const string _url)
+		{
+			shared_ptr<IStream> file ( new FileStream( m_path + string("/") + _url, m_overWrite ));
+			return file;
+		}
+
+
+		bool SourceFile::isFetchable( const string _url)
+		{
+
+			DIR *dp;
+			struct dirent *ep;
+     
+			unsigned int pathLimit = _url.find_last_of("/");
+		
+			string directory = m_path;
+	
+			// Add a trailing '/' to the path
+			if (directory.size())
+			{
+				if (directory[directory.size()-1] != '/')
+				{
+					directory = directory + "/";
+				}
+			}
+
+			// We want the full directory
+			if (pathLimit != string::npos)
+			{
+				directory = directory + _url.substr(0, pathLimit);
+			}
+
+
+			bool result = false;
+			string fileName = _url; // The file we are looking for
+
+			// We want to extract the filename from the directory (if there is any)
+			if (pathLimit != string::npos) 
+			{
+				fileName = _url.substr(pathLimit);
+			}
+
+			// We open the directory and go through it, looking for our file
+			dp = opendir (directory.c_str());
+			if (dp != NULL)
+         {
+           while ((ep = readdir (dp)) && (result == false))
+			  {
+             if (ep->d_name == fileName)
+				{
+					result = true;
+				}
+				}
+           (void) closedir (dp);
+         }
+
+		 	return result;
+
+		}
+		
+
+		void SourceFile::setOverWrite(bool _mode)
+		{
+			m_overWrite = _mode;
+		}
 	}
-
-	return 1; //Glib::file_test(_url, Glib::FILE_TEST_EXISTS);
-}
-
-
-void SourceFile::setOverWrite(bool _mode)
-{
-	m_overWrite = _mode;
 }
 
